added remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,11 @@ github_username:  c-wee
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
+remote_theme: niklasbuschmann/contrast
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
